# feth_tools

./: .env.example  .gitignore  MANIFEST.md  README.md  build.bat  build.cmd  graphics.md  hard-build.bat  init.bat  install.bat  meta.md  pyproject.toml  requirements.txt  setup.py
app/: __main__.py
app/binary/: gz.py  unpack.py  update.py
app/binary/compression/: base.py  map.py  msgdata.py  subtitle.py  support.py
app/csv/: bundle.py  fixes.py  header.py  vars.py
app/graphic/: tutorial.py
app/text/: pack.py  unpack.py
app/utils/: clear.py  path.py  string.py
feth/: __main__.py
feth/binary/: gz.py  unpack.py  update.py
feth/binary/compression/: credit.py  map.py  msgdata.py  subtitle.py  support.py
feth/common/: indexes.py
feth/csv/: bundle.py  fixes.py  vars.py
feth/graphic/: ba.py  tutorial.py
feth/parser/: map.py  msgdata.py  subtitle.py  support.py
feth/text/: pack.py  unpack.py
feth/utils/: clear.py  common.py  enums.py  merge.py  path.py  string.py
