[project]
name = "feth"
version = "1.0.0"
description = "Инструменты для перевода Fire Emblem: Three Houses"
authors = [{ name = "emblem_team", email = "emblem.team@mail.ru" }]
requires-python = "==3.12"
dependencies = [
    "click",
    "colorama",
    "iostuff_tools",
    "jsonpickle",
    "python-dotenv"
]

[project.scripts]
feth = "feth.__main__:main"
